# intellij-rust-example

./: Cargo.toml
crates/bins/: Cargo.toml
crates/bins/src/: main.rs
crates/enums/: Cargo.toml
crates/enums/src/: data.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
