[package]
name = "enums"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
strum = "0.23"
strum_macros = "0.23"
proc-macro2 = "1.0.3"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["parsing", "extra-traits", "visit"] }

macros = { path = "../macros", version = "0.0.0" }
